// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefenseAbilities matches the snapshot 1`] = `
<div>
  <div>
    <div
      class="d-flex collapse.show justify-content-center my-3 custom-control custom-switch"
    >
      <input
        class="custom-control-input my-auto"
        id="armorToggle"
        type="checkbox"
      />
      <label
        class="custom-control-label drop-down-label mx-2 my-auto"
        for="armorToggle"
      >
        Armor
      </label>
    </div>
    <div
      class="d-flex collapse.show justify-content-center my-3 custom-control custom-switch"
    >
      <input
        class="custom-control-input my-auto"
        id="armorXToggle"
        type="checkbox"
      />
      <label
        class="custom-control-label drop-down-label mx-2 my-auto"
        for="armorXToggle"
      >
        Armor
      </label>
      <select
        class="rounded-lg mr-4 px-2"
      >
        <option
          value="1"
        >
          1
        </option>
        <option
          value="2"
        >
          2
        </option>
        <option
          value="3"
        >
          3
        </option>
      </select>
    </div>
    <div
      class="d-flex collapse.show justify-content-center my-3 custom-control custom-switch"
    >
      <input
        class="custom-control-input my-auto"
        id="blockToggle"
        type="checkbox"
      />
      <label
        class="custom-control-label drop-down-label mx-2 my-auto"
        for="blockToggle"
      >
        Block
      </label>
    </div>
    <div
      class="d-flex collapse.show justify-content-center my-3 custom-control custom-switch"
    >
      <input
        class="custom-control-input my-auto"
        id="dangerSenseXToggle"
        type="checkbox"
      />
      <label
        class="custom-control-label drop-down-label mx-2 my-auto"
        for="dangerSenseXToggle"
      >
        Danger Sense
      </label>
      <select
        class="rounded-lg mr-4 px-2"
      >
        <option
          value="1"
        >
          1
        </option>
        <option
          value="2"
        >
          2
        </option>
        <option
          value="3"
        >
          3
        </option>
        <option
          value="4"
        >
          4
        </option>
      </select>
    </div>
    <div
      class="d-flex collapse.show justify-content-center my-3 custom-control custom-switch"
    >
      <input
        class="custom-control-input my-auto"
        id="deflectToggle"
        type="checkbox"
      />
      <label
        class="custom-control-label drop-down-label mx-2 my-auto"
        for="deflectToggle"
      >
        Deflect
      </label>
    </div>
    <div
      class="d-flex collapse.show justify-content-center my-3 custom-control custom-switch"
    >
      <input
        class="custom-control-input my-auto"
        id="djemSoMasteryToggle"
        type="checkbox"
      />
      <label
        class="custom-control-label drop-down-label mx-2 my-auto"
        for="djemSoMasteryToggle"
      >
        Djem So Mastery
      </label>
    </div>
    <div
      class="d-flex collapse.show justify-content-center my-3 custom-control custom-switch"
    >
      <input
        class="custom-control-input my-auto"
        id="duelistDefenseToggle"
        type="checkbox"
      />
      <label
        class="custom-control-label drop-down-label mx-2 my-auto"
        for="duelistDefenseToggle"
      >
        Duelist
      </label>
    </div>
    <div
      class="d-flex collapse.show justify-content-center my-3 custom-control custom-switch"
    >
      <input
        class="custom-control-input my-auto"
        id="hasForceUpgrades"
        type="checkbox"
      />
      <label
        class="custom-control-label drop-down-label mx-2 my-auto"
        for="hasForceUpgrades"
      >
        Force Upgrade(s)
      </label>
    </div>
    <div
      class="d-flex collapse.show justify-content-center my-3 custom-control custom-switch"
    >
      <input
        class="custom-control-input my-auto"
        id="imperviousToggle"
        type="checkbox"
      />
      <label
        class="custom-control-label drop-down-label mx-2 my-auto"
        for="imperviousToggle"
      >
        Impervious
      </label>
    </div>
    <div
      class="d-flex collapse.show justify-content-center my-3 custom-control custom-switch"
    >
      <input
        class="custom-control-input my-auto"
        id="immuneBlastToggle"
        type="checkbox"
      />
      <label
        class="custom-control-label drop-down-label mx-2 my-auto"
        for="immuneBlastToggle"
      >
        Immune: Blast
      </label>
    </div>
    <div
      class="d-flex collapse.show justify-content-center my-3 custom-control custom-switch"
    >
      <input
        class="custom-control-input my-auto"
        id="immuneMeleePierceToggle"
        type="checkbox"
      />
      <label
        class="custom-control-label drop-down-label mx-2 my-auto"
        for="immuneMeleePierceToggle"
      >
        Immune: Melee Pierce
      </label>
    </div>
    <div
      class="d-flex collapse.show justify-content-center my-3 custom-control custom-switch"
    >
      <input
        class="custom-control-input my-auto"
        id="immunePierceToggle"
        type="checkbox"
      />
      <label
        class="custom-control-label drop-down-label mx-2 my-auto"
        for="immunePierceToggle"
      >
        Immune: Pierce
      </label>
    </div>
    <div
      class="d-flex collapse.show justify-content-center my-3 custom-control custom-switch"
    >
      <input
        class="custom-control-input my-auto"
        id="lowProfileToggle"
        type="checkbox"
      />
      <label
        class="custom-control-label drop-down-label mx-2 my-auto"
        for="lowProfileToggle"
      >
        Low Profile
      </label>
    </div>
    <div
      class="d-flex collapse.show justify-content-center my-3 custom-control custom-switch"
    >
      <input
        class="custom-control-input my-auto"
        id="redCoverDiceToggle"
        type="checkbox"
      />
      <label
        class="custom-control-label drop-down-label mx-2 my-auto"
        for="redCoverDiceToggle"
      >
        Red Cover Dice
      </label>
    </div>
    <div
      class="d-flex collapse.show justify-content-center my-3 custom-control custom-switch"
    >
      <input
        class="custom-control-input my-auto"
        id="outmaneuverToggle"
        type="checkbox"
      />
      <label
        class="custom-control-label drop-down-label mx-2 my-auto"
        for="outmaneuverToggle"
      >
        Outmaneuver
      </label>
    </div>
    <div
      class="d-flex collapse.show justify-content-center my-3 custom-control custom-switch"
    >
      <input
        class="custom-control-input my-auto"
        id="soresuMasteryToggle"
        type="checkbox"
      />
      <label
        class="custom-control-label drop-down-label mx-2 my-auto"
        for="soresuMasteryToggle"
      >
        Soresu Mastery
      </label>
    </div>
    <div
      class="d-flex collapse.show justify-content-center my-3 custom-control custom-switch"
    >
      <input
        class="custom-control-input my-auto"
        id="uncannyLuckToggle"
        type="checkbox"
      />
      <label
        class="custom-control-label drop-down-label mx-2 my-auto"
        for="uncannyLuckToggle"
      >
        Uncanny Luck
      </label>
      <select
        class="rounded-lg mr-4 px-2"
      >
        <option
          value="1"
        >
          1
        </option>
        <option
          value="2"
        >
          2
        </option>
        <option
          value="3"
        >
          3
        </option>
      </select>
    </div>
  </div>
</div>
`;

exports[`DefenseAbilities matches the snapshot for simplified view 1`] = `
<div>
  <div>
    <div
      class="d-flex collapse.show justify-content-center my-3 custom-control custom-switch"
    >
      <input
        class="custom-control-input my-auto"
        id="armorToggle"
        type="checkbox"
      />
      <label
        class="custom-control-label drop-down-label mx-2 my-auto"
        for="armorToggle"
      >
        Armor
      </label>
    </div>
    <div
      class="collapse justify-content-center my-3 custom-control custom-switch"
    >
      <input
        class="custom-control-input my-auto"
        id="armorXToggle"
        type="checkbox"
      />
      <label
        class="custom-control-label drop-down-label mx-2 my-auto"
        for="armorXToggle"
      >
        Armor
      </label>
      <select
        class="rounded-lg mr-4 px-2"
      >
        <option
          value="1"
        >
          1
        </option>
        <option
          value="2"
        >
          2
        </option>
        <option
          value="3"
        >
          3
        </option>
      </select>
    </div>
    <div
      class="collapse justify-content-center my-3 custom-control custom-switch"
    >
      <input
        class="custom-control-input my-auto"
        id="blockToggle"
        type="checkbox"
      />
      <label
        class="custom-control-label drop-down-label mx-2 my-auto"
        for="blockToggle"
      >
        Block
      </label>
    </div>
    <div
      class="collapse justify-content-center my-3 custom-control custom-switch"
    >
      <input
        class="custom-control-input my-auto"
        id="dangerSenseXToggle"
        type="checkbox"
      />
      <label
        class="custom-control-label drop-down-label mx-2 my-auto"
        for="dangerSenseXToggle"
      >
        Danger Sense
      </label>
      <select
        class="rounded-lg mr-4 px-2"
      >
        <option
          value="1"
        >
          1
        </option>
        <option
          value="2"
        >
          2
        </option>
        <option
          value="3"
        >
          3
        </option>
        <option
          value="4"
        >
          4
        </option>
      </select>
    </div>
    <div
      class="d-flex collapse.show justify-content-center my-3 custom-control custom-switch"
    >
      <input
        class="custom-control-input my-auto"
        id="deflectToggle"
        type="checkbox"
      />
      <label
        class="custom-control-label drop-down-label mx-2 my-auto"
        for="deflectToggle"
      >
        Deflect
      </label>
    </div>
    <div
      class="collapse justify-content-center my-3 custom-control custom-switch"
    >
      <input
        class="custom-control-input my-auto"
        id="djemSoMasteryToggle"
        type="checkbox"
      />
      <label
        class="custom-control-label drop-down-label mx-2 my-auto"
        for="djemSoMasteryToggle"
      >
        Djem So Mastery
      </label>
    </div>
    <div
      class="collapse justify-content-center my-3 custom-control custom-switch"
    >
      <input
        class="custom-control-input my-auto"
        id="duelistDefenseToggle"
        type="checkbox"
      />
      <label
        class="custom-control-label drop-down-label mx-2 my-auto"
        for="duelistDefenseToggle"
      >
        Duelist
      </label>
    </div>
    <div
      class="collapse justify-content-center my-3 custom-control custom-switch"
    >
      <input
        class="custom-control-input my-auto"
        id="hasForceUpgrades"
        type="checkbox"
      />
      <label
        class="custom-control-label drop-down-label mx-2 my-auto"
        for="hasForceUpgrades"
      >
        Force Upgrade(s)
      </label>
    </div>
    <div
      class="d-flex collapse.show justify-content-center my-3 custom-control custom-switch"
    >
      <input
        class="custom-control-input my-auto"
        id="imperviousToggle"
        type="checkbox"
      />
      <label
        class="custom-control-label drop-down-label mx-2 my-auto"
        for="imperviousToggle"
      >
        Impervious
      </label>
    </div>
    <div
      class="collapse justify-content-center my-3 custom-control custom-switch"
    >
      <input
        class="custom-control-input my-auto"
        id="immuneBlastToggle"
        type="checkbox"
      />
      <label
        class="custom-control-label drop-down-label mx-2 my-auto"
        for="immuneBlastToggle"
      >
        Immune: Blast
      </label>
    </div>
    <div
      class="collapse justify-content-center my-3 custom-control custom-switch"
    >
      <input
        class="custom-control-input my-auto"
        id="immuneMeleePierceToggle"
        type="checkbox"
      />
      <label
        class="custom-control-label drop-down-label mx-2 my-auto"
        for="immuneMeleePierceToggle"
      >
        Immune: Melee Pierce
      </label>
    </div>
    <div
      class="d-flex collapse.show justify-content-center my-3 custom-control custom-switch"
    >
      <input
        class="custom-control-input my-auto"
        id="immunePierceToggle"
        type="checkbox"
      />
      <label
        class="custom-control-label drop-down-label mx-2 my-auto"
        for="immunePierceToggle"
      >
        Immune: Pierce
      </label>
    </div>
    <div
      class="d-flex collapse.show justify-content-center my-3 custom-control custom-switch"
    >
      <input
        class="custom-control-input my-auto"
        id="lowProfileToggle"
        type="checkbox"
      />
      <label
        class="custom-control-label drop-down-label mx-2 my-auto"
        for="lowProfileToggle"
      >
        Low Profile
      </label>
    </div>
    <div
      class="collapse justify-content-center my-3 custom-control custom-switch"
    >
      <input
        class="custom-control-input my-auto"
        id="redCoverDiceToggle"
        type="checkbox"
      />
      <label
        class="custom-control-label drop-down-label mx-2 my-auto"
        for="redCoverDiceToggle"
      >
        Red Cover Dice
      </label>
    </div>
    <div
      class="d-flex collapse.show justify-content-center my-3 custom-control custom-switch"
    >
      <input
        class="custom-control-input my-auto"
        id="outmaneuverToggle"
        type="checkbox"
      />
      <label
        class="custom-control-label drop-down-label mx-2 my-auto"
        for="outmaneuverToggle"
      >
        Outmaneuver
      </label>
    </div>
    <div
      class="collapse justify-content-center my-3 custom-control custom-switch"
    >
      <input
        class="custom-control-input my-auto"
        id="soresuMasteryToggle"
        type="checkbox"
      />
      <label
        class="custom-control-label drop-down-label mx-2 my-auto"
        for="soresuMasteryToggle"
      >
        Soresu Mastery
      </label>
    </div>
    <div
      class="collapse justify-content-center my-3 custom-control custom-switch"
    >
      <input
        class="custom-control-input my-auto"
        id="uncannyLuckToggle"
        type="checkbox"
      />
      <label
        class="custom-control-label drop-down-label mx-2 my-auto"
        for="uncannyLuckToggle"
      >
        Uncanny Luck
      </label>
      <select
        class="rounded-lg mr-4 px-2"
      >
        <option
          value="1"
        >
          1
        </option>
        <option
          value="2"
        >
          2
        </option>
        <option
          value="3"
        >
          3
        </option>
      </select>
    </div>
  </div>
</div>
`;
